<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_page_bg">

    <ImageView
        android:id="@+id/iv_twitter"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_profile" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/curr_location"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_setting" />

    <ImageView
        android:id="@+id/iv_back_contact"
        android:layout_width="16dp"
        android:layout_height="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/icon_map" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:paddingEnd="10dp"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back_contact"
        app:layout_constraintStart_toEndOf="@+id/iv_back_contact"
        app:layout_constraintTop_toTopOf="@+id/iv_back_contact"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

    <TextView
        android:id="@+id/et_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/for_you"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btnCheckLocation"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckLocation" />

    <TextView
        android:id="@+id/tvSeeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:text="@string/see_all"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rv_Homepage"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Homepage"
        android:layout_width="346dp"
        android:layout_height="550dp"
        android:paddingStart="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:listitem="@layout/item_view" />

    <Button
        android:id="@+id/btnCheckLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/check_location"
        android:textSize="12sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnCheckWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/check_weather"
        android:textSize="12sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/btnCheckLocation"
        app:layout_constraintStart_toEndOf="@+id/btnCheckLocation"
        app:layout_constraintTop_toTopOf="@+id/btnCheckLocation" />

    <ImageView
        android:id="@+id/iv_setting"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_twitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_twitter"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_settings_24" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/white"
        android:text="+"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvSeeAll"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>