<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dessert"
    tools:context=".UI.SignInPage">

    <TextView
        android:id="@+id/tvEasyGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/EASY_GO"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/Welcome_Back"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEasyGo" />

    <TextView
        android:id="@+id/tvSignInToYourAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/Sign_in_to_your_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tvWelcomeBack"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/tvWelcomeBack"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_putih"
        android:ems="10"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="Email"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="#7F7F7F"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvSignInToYourAccount"
        app:layout_constraintStart_toStartOf="@+id/tvSignInToYourAccount"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInToYourAccount"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/shape_putih"
        android:ems="10"
        android:fontFamily="@font/montserrat_semibold"
        android:textColorHint="#7F7F7F"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="352dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/Forgot_Password"
        android:textAlignment="center"
        android:textColor="#3F95EC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSignIn1"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:backgroundTint="#3F95EC"
        android:text="Sign In"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/tvOrLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/Or_login_with"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn1"
        app:layout_constraintStart_toStartOf="@+id/btnSignIn1"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn1" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tvOrLoginWith"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/tvOrLoginWith"
        app:layout_constraintTop_toBottomOf="@+id/tvOrLoginWith" />

    <ImageView
        android:id="@+id/ivBack8"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEasyGo"
        app:layout_constraintEnd_toStartOf="@+id/tvEasyGo"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvEasyGo"
        app:srcCompat="@drawable/icon_back_white" />

</androidx.constraintlayout.widget.ConstraintLayout>