<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/padang_pasir_gelap"
    tools:context=".UI.EditPage">


    <TextView
        android:id="@+id/tvLokasi"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/Lokasi"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNama1" />

    <TextView
        android:id="@+id/tvDeskripsi"
        android:layout_width="102dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/Deskripsi"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLokasi1" />

    <EditText
        android:id="@+id/editNama1"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:background="@drawable/shape_putih"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNama" />

    <Button
        android:id="@+id/btSaveDestiantion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F95EC"
        android:text="Save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/Nama"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editLokasi1"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_putih"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLokasi" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_biru"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        android:paddingTop="23dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="Edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBackEditPage1"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/icon_back_button" />

    <EditText
        android:id="@+id/editDeskripsi1"
        android:layout_width="316dp"
        android:layout_height="253dp"
        android:background="@drawable/shape_putih"
        android:ems="10"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        android:textSize="20sp"
        android:padding="20dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/tvDeskripsi"
        app:layout_constraintTop_toBottomOf="@+id/tvDeskripsi" />


</androidx.constraintlayout.widget.ConstraintLayout>